# PbD_FRI

./: .gitignore  LICENSE  README.md
FTSensor/: CMakeLists.txt  manifest.xml  setup_ftsensor.ops
FTSensor/include/FTSensor/: FTSensor-types.hpp
FTSensor/src/: CMakeLists.txt  FTSensor-component.cpp  FTSensor-component.hpp  FTSensor-plugin.cpp  ftsComm.h
KUKACommander/: CMakeLists.txt  manifest.xml  setup_kuka_commander.ops
KUKACommander/deploy/: setup_kuka_commander.ops
KUKACommander/deploy/cpf/: CartesianGeneratorConfig.cpf  nAxesGeneratorConfig.cpf
KUKACommander/include/KUKACommander/: KUKACommander-types.hpp
KUKACommander/src/: CMakeLists.txt  KUKACommander-plugin.cpp  KUKACommander.cpp  KUKACommander.hpp  KUKACommanderROS.cpp  KUKACommanderROS.hpp
KUKACommander/srv/: cart_lin_motion.srv  cart_ptp_motion.srv  get_fri_ctrl.srv  get_fri_state.srv  get_quat_from_rpy.srv  joint_ptp_motion.srv  move_to_cart_pos.srv  move_to_jnt_pos.srv  set_bool.srv  set_cart_imp.srv  set_fri_ctrl.srv  set_jnt_imp.srv
basic_moves/: CMakeLists.txt  manifest.xml  setup_basic_moves.xml
basic_moves/include/basic_moves/: basic_moves-types.hpp
basic_moves/src/: CMakeLists.txt  basic_moves-component.cpp  basic_moves-component.hpp  basic_moves-plugin.cpp
fri_ros_publisher/: CMakeLists.txt  manifest.xml  setup_asm_publisher.ops  setup_publisher.ops  setup_receiver.ops
fri_ros_publisher/src/: CMakeLists.txt  fri_ros_publisher-component.cpp  fri_ros_publisher-component.hpp  fri_ros_publisher-plugin.cpp  fri_ros_receiver-component.cpp  fri_ros_receiver-component.hpp
kuka_robot_hardware/kuka_lwr_fri/: .gitignore  CMakeLists.txt
kuka_robot_hardware/lwr_fri/: .gitignore  CMakeLists.txt
kuka_robot_hardware/lwr_fri/example/: test_LWR_naxes.xml  test_LWR_naxes.xml~
kuka_robot_hardware/lwr_fri/example/cpf/: FRIServer.cpf  nAxesGeneratorPos.cpf  nAxesGeneratorPosT2.cpf  reporter_naxes.cpf  reporter_naxes.cpf~
kuka_robot_hardware/lwr_fri/msg/: FriIntfStatistics.msg  FriRobotState.msg
kuka_robot_hardware/lwr_fri/src/: FRIRTNetComponent.cpp  FRIServerRT.cpp  FRIServerRT.hpp
motion_control/: .gitignore  ChangeLog  README  stack.xml
motion_control/cartesian_motion_control/: CMakeLists.txt  README  gendoc.sh  mainpage.dox  manifest.xml
motion_control/cartesian_motion_control/doc/: MotionControl.CartesianControllerPos.compdoc  MotionControl.CartesianControllerPosVel.compdoc  MotionControl.CartesianControllerVel.compdoc  MotionControl.CartesianGeneratorPos.compdoc  MotionControl.KinematicConverter.compdoc
motion_control/cartesian_motion_control/src/: CartesianComponents.hpp  CartesianControllerPos.cpp  CartesianControllerPos.hpp  CartesianControllerPosVel.cpp  CartesianControllerPosVel.hpp  CartesianControllerVel.cpp  CartesianControllerVel.hpp  CartesianGeneratorPos.cpp  CartesianGeneratorPos.hpp  CartesianImpedanceController.cpp  CartesianImpedanceController.hpp  kinematic_converter.cpp  kinematic_converter.hpp
motion_control/motion_control_msgs/: mainpage.dox  manifest.xml
motion_control/motion_control_msgs/msg/: JointAccelerations.msg
motion_control/motion_control_msgs/src/motion_control_msgs/msg/: _JointAccelerations.py  _JointEfforts.py  _JointPositions.py  _JointVelocities.py  __init__.py
motion_control/naxes_motion_control/: CMakeLists.txt  manifest.xml
motion_control/naxes_motion_control/src/: nAxesControllerPos.cpp  nAxesControllerPos.hpp  nAxesGeneratorPos.cpp  nAxesGeneratorPos.hpp
motion_control/rtt_motion_control_msgs/: CMakeLists.txt  manifest.xml
motion_control/rtt_motion_control_msgs/include/motion_control_msgs/boost/: JointAccelerations.h  JointEfforts.h  JointPositions.h  JointVelocities.h
motion_control/rtt_motion_control_msgs/include/motion_control_msgs/typekit/: JointAccelerations.h  JointEfforts.h  JointPositions.h  JointVelocities.h  Types.hpp
motion_control/rtt_motion_control_msgs/src/orocos/types/: ros_JointAccelerations_transport_plugin.cpp  ros_JointAccelerations_typekit_plugin.cpp  ros_JointEfforts_transport_plugin.cpp  ros_JointEfforts_typekit_plugin.cpp  ros_JointPositions_transport_plugin.cpp  ros_JointPositions_typekit_plugin.cpp  ros_JointVelocities_transport_plugin.cpp  ros_JointVelocities_typekit_plugin.cpp  ros_motion_control_msgs_transport.cpp  ros_motion_control_msgs_typekit.cpp
trajectory-generator/kuka_IK/: CMakeLists.txt  manifest.xml
trajectory-generator/kuka_IK/src/: kuka_IK-component.cpp
